[package]
name = "thinknaut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["http2"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }